--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Esta es la pagina web para la empresa Soluciones Aragon",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode=development",
-    "console": "node dist/main.js"
+    "build": "webpack --mode development",
+    "production": "webpack --mode production",
+    "node": "node dist/main.js"
   },
   "keywords": [
     "javascript",
